--- a/assets/theme-styles/css/default.css
+++ b/assets/theme-styles/css/default.css
@@ -235,6 +235,7 @@ q {
   margin: auto;
   padding-top: 2em;
   padding-bottom: 2em;
+  background-color: white;
 }
 
 .page-header {
@@ -311,7 +312,7 @@ q {
   margin-bottom: 0;
 }
 .site-branding img.custom-logo {
-  max-height: 60px;
+  max-height: 120px;
   width: auto;
 }
 
@@ -558,7 +559,7 @@ button.go-to-top, button.go-to-bottom {
 }
 #menu ul li {
   list-style: none;
-  padding: 0px;
+  padding: 0;
   margin: 0;
   position: relative;
 }
