--- a/assets/theme-styles/sass/sections/_navigation.scss
+++ b/assets/theme-styles/sass/sections/_navigation.scss
@@ -140,7 +140,7 @@ button.go-to-top, button.go-to-bottom {
 		width: 100%;
 	    li {
 			list-style: none;
-			padding: 0px;
+			padding: 0;
 			margin: 0;
 			position: relative;
 			&:before {
