--- a/assets/theme-styles/sass/sections/_top.bar.scss
+++ b/assets/theme-styles/sass/sections/_top.bar.scss
@@ -83,8 +83,10 @@
 				top: 100%;
 				z-index: 99;
 				min-width: 120px;
+				left: 0;
+				right: 0;
 				li {
-					margin: 0.2em 0.35em;
+					margin: 0.4em 0.8em;
 				}
 			}
 		}
