--- a/assets/theme-styles/sass/sections/_navigation.scss
+++ b/assets/theme-styles/sass/sections/_navigation.scss
@@ -2,7 +2,7 @@
  *	Style for Navigation Drawer
  */
  
-  #site-navigation {
+  .main-navigation {
 	width: auto;
 	@extend %heading-font;
 	font-weight: 700;
@@ -191,5 +191,10 @@ body {
 		top: 0;
 		@include transition(all 300ms ease-out);
 		@include transform(translateY(-100%));
+		.itng-search {
+			bottom: unset;
+			top: 100%;
+			z-index: 9;
+		}
 	}
 }
