--- a/assets/theme-styles/sass/sections/_search.scss
+++ b/assets/theme-styles/sass/sections/_search.scss
@@ -15,7 +15,7 @@
 		background-color: $primary;
 		
 		label {
-			height: 100%;
+			height: 60px;
 			display: flex;
 			align-items: center;
 			margin: 0;
