--- a/assets/theme-styles/sass/sections/_navigation.scss
+++ b/assets/theme-styles/sass/sections/_navigation.scss
@@ -18,22 +18,22 @@
 			& > li {
 				margin: 0;
 				float: left;
-				&.menu-item-has-children > a, &.page-item-has-children > a {
+				&.menu-item-has-children > a, &.page_item_has_children > a {
 					&:after {
 						position: relative;
 						content: "\f107";
 						font-family: "FontAwesome";
-						padding-left: 3px;
+						padding-left: 10px;
 					}
 				}
 				& > a {
 					padding-top: 1.2em;
 					padding-bottom: 1.2em;
 					color: white;
-					&:hover {
-						background-color: rgba(0,0,0,0.08);
-					}
 				}
+			}
+			li:hover {
+				background-color: rgba(0,0,0,0.05);
 			}
 			ul {
 				flex-direction: column;
@@ -42,17 +42,16 @@
 				background-color: $primary; 
 				@include transform(translateY(-15px));
 				@include transition(opacity 300ms $standard, transform 300ms $decelerate);
-				box-shadow: none;
 				font-weight: 400;
 				li {
 					float: none;
 					display: block;
 					position: relative;
 					margin: 0;
-					a:hover {
-						background-color: rgba(0,0,0,0.08);
-					}
-					&.menu-item-has-children  > a:after, &.page-item-has-children  > a:after {
+					border: solid 1px rgba(0,0,0,0.1);
+					border-top: solid 1px rgba(255,255,255,.1);
+					border-left: solid 1px rgba(255,255,255,0.1);
+					&.menu-item-has-children  > a:after, &.page_item_has_children  > a:after {
 						position: relative;
 						content: "\f105";
 						font-family: "FontAwesome";
