--- a/assets/theme-styles/css/default.css
+++ b/assets/theme-styles/css/default.css
@@ -256,6 +256,13 @@ q {
 
 .page-header {
   width: 100%;
+  margin-bottom: 0.8em;
+}
+.page-header .page-title {
+  font-weight: 400;
+}
+.page-header span {
+  font-weight: 700;
 }
 
 .page-content, .entry-content, .entry-summary {
