--- a/assets/theme-styles/sass/sections/_single.scss
+++ b/assets/theme-styles/sass/sections/_single.scss
@@ -24,7 +24,8 @@ body.single {
 			}
 			a {
 				color: $primary;
-				font-weight: 700;
+				font-size: 0.9em;
+				text-transform: uppercase;
 			}
 		}
 		.entry-content {
