--- a/assets/theme-styles/sass/sections/_top.bar.scss
+++ b/assets/theme-styles/sass/sections/_top.bar.scss
@@ -37,6 +37,9 @@
 					&.fa-flickr:hover {
 						color: black;
 					}
+					&.fa-linkedin:hover {
+						color: #1d6abc;
+					}
 				}
 			}
 		}
