--- a/assets/theme-styles/sass/sections/_navigation.scss
+++ b/assets/theme-styles/sass/sections/_navigation.scss
@@ -66,7 +66,7 @@
 			li:hover > ul, li:focus-within > ul {
 				opacity: 1;
 				left: auto;
-				@include transform(translateY(0px));
+				@include transform( translateY(0px) );
 			}
 		}
 	}
@@ -91,6 +91,8 @@
 		float: right;
 		border: 0;
 		border-radius: 0;
+		font-size: 1.4em;
+		padding: 0.4em;
 		background-color: rgba(255,255,255,0.1);
 		color: white;
 	}
@@ -190,6 +192,7 @@ body {
 		top: 0;
 		@include transition(all 300ms ease-out);
 		@include transform(translateY(-100%));
+		z-index: 9;
 		.itng-search {
 			bottom: unset;
 			top: 100%;
