--- a/assets/theme-styles/sass/sections/_search.scss
+++ b/assets/theme-styles/sass/sections/_search.scss
@@ -20,7 +20,7 @@
 			display: flex;
 			align-items: center;
 			margin: 0;
-			input[type="text"] {
+			input[type="search"] {
 				position: relative;
 				height: 100%;
 				background-color: rgba(0,0,0,.14);
@@ -31,7 +31,13 @@
 				&::placeholder {
 					color: rgba(255,255,255,0.4);
 				}
+				&:focus-visible {
+					outline: none;
+				}
 			}
+		}
+		input[type="submit"] {
+			display: none;
 		}
 	}
 	button {
