--- a/assets/theme-styles/sass/sections/_top.bar.scss
+++ b/assets/theme-styles/sass/sections/_top.bar.scss
@@ -22,7 +22,7 @@
 					&.fa-rss:hover {
 						color: #e66237;
 					}
-					&.fa-pinterest-p:hover {
+					&.fa-pinterest:hover {
 						color: #c22532;
 					}
 					&.fa-vimeo:hover {
@@ -62,7 +62,7 @@
 				li {
 					float: left;
 					margin: auto 0.5em;
-					
+
 				}
 			}
 		}
